--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
 
-  <link rel="stylesheet" href="homework-css-4.css">
+  <link rel="stylesheet" href="styles.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
